# R.O.B.E.R.T

./: README.md
Application/Legacy-WPF_UI/: App.xaml.cs  COMDropDownCC.cs  ROBERT-UI.csproj  ROBERT-UI.sln
Application/ROBERT-APP/: package-lock.json  package.json  tailwind.config.js
Application/ROBERT-APP/src-tauri/: Cargo.toml  tauri.conf.json
Application/ROBERT-APP/src-tauri/icons/: icon.icns
Application/ROBERT-APP/src-tauri/src/: background_tasks.rs  commands.rs  constants.rs  lib.rs  state.rs  utils.rs
Application/ROBERT-UI/: App.xaml  COMDropDownCC.cs  MainWindow.xaml  MainWindow.xaml.cs  ROBERT-UI.csproj
Arduino robot arm files/: Hardware.txt
Arduino robot arm files/Additional/: BaseLimiter.stl  LimitSwitchBase.stl
Arduino robot arm files/Case/: Base Top Half.stl  BottomPlate2.stl  Box.stl  CE3V2NEO_Base Top Half.gcode  ConnectorPannel v5.stl  ConnectorPannel.stl  Electronics Box 180mmx130mmx60mm.SLDPRT  PowerSupplyHolder.stl  PowerSupplySupport.stl  USBc v1.stl  Ventilation_.stl
Arduino robot arm files/PiecesRework/: ReductorSeparator.stl
Arduino robot arm files/Robot Solidworks model/: 5mm akseli 2.SLDPRT  BaseWall_2_v2.SLDPRT  Bottom support.SLDPRT  HTD80T 2mm spacer.SLDPRT  Nema8 Stepperi (banggood.com).SLDPRT  Pulley100Tv5.SLDPRT  Rotation arm V3.SLDPRT
ArduinoScripts/SerialController/: CommandProcessor.cpp  CommandProcessor.h  Constants.h  SerialController.ino  StepperManager.cpp  StepperManager.h
RobScripts/: test - copia-with-long-name.rob  test.rob
tw2ka Arduino robot arm files/Arduino robot arm files/: Hardware.txt
(+53 files in other folders)
