[package]
name = "robert-app"
version = "0.2.0"
description = "Desktop app to control an Arduino based, 6-DoF robotic arm"
authors = ["Pablo Pérez Martín"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "robert_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.0" 
once_cell = "1.17"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.4"
